Blackpurl/src/objects/Customer_Page_Size__c.object
<CustomObject>
    <fields>
        <fullName>Drop_Down_Number__c</fullName>
        <label>Drop Down Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Page_Sizes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Customer Page Size</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CPS-{00000}</displayFormat>
        <label>Customer Page Size Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Page Sizes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>